# tp_sfsd_2023-2024

./: CMakeLists.txt  README.md  affichage.c  fonction.c  fonction.h  main.c  variable_globale.h
